// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 30,
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    underlayColor="transparent"
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "padding": 12,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <customIconComponent
        color="white"
        iconRight={true}
        name="wifi"
        size={22}
        style={
          Array [
            Object {
              "marginRight": 10,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      />
      <TextElement
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontSize": 17.5,
            },
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`Button Component should render with default icon 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    underlayColor="transparent"
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "padding": 12,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <Icon
        allowFontScaling={false}
        color="white"
        iconRight={true}
        name="wifi"
        size={22}
        style={
          Array [
            Object {
              "marginRight": 10,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      />
      <TextElement
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontSize": 17.5,
            },
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`Button Component should render with icon type 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    underlayColor="transparent"
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#007AFF",
            "borderRadius": 3,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
            undefined,
            Object {
              "fontSize": 17.5,
            },
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`Button Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    disabled={false}
    onPress={[Function]}
    underlayColor="transparent"
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "padding": 12,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      <TextElement
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontSize": 17.5,
            },
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        Welcome to
        React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
